--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/scss/material-dashboard.min.scss",
+              "src/assets/css/material-dashboard.min.css",
               "src/styles.scss"
 
             ],
