--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "arrive": "^2.4.1",
     "bootstrap-material-design": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
