--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,10 @@
 
             ],
             "scripts": [
+              "src/assets/js/core/jquery.min.js",
+              "src/assets/js/core/popper.min.js",
+              "src/assets/js/core/bootstrap-material-design.min.js",
+              "src/assets/js/plugins/perfect-scrollbar.jquery.min.js"
             ]
           },
           "configurations": {
