Added BS selectpicker and mat dash min JS to scripts

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,9 @@
               "src/assets/js/core/jquery.min.js",
               "src/assets/js/core/popper.min.js",
               "src/assets/js/core/bootstrap-material-design.min.js",
-              "src/assets/js/plugins/perfect-scrollbar.jquery.min.js"
+              "src/assets/js/plugins/perfect-scrollbar.jquery.min.js",
+              "src/assets/js/plugins/bootstrap-selectpicker.js",
+              "src/assets/js/material-dashboard.min.js"
             ]
           },
           "configurations": {
