--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,8 @@
             ],
             "styles": [
               "src/assets/css/material-dashboard.min.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
-
             ],
             "scripts": [
               "src/assets/js/core/jquery.min.js",
