--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.6",
+    "@angular/animations": "^11.0.9",
     "@angular/common": "~11.0.6",
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
@@ -26,6 +26,7 @@
     "chartist": "^0.11.4",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
