--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "bootstrap-material-design": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
     "chartist": "^0.11.4",
+    "echarts": "^5.0.2",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ngx-echarts": "^6.0.1",
     "ngx-toastr": "^13.2.0",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
